fixed alignment of page

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -1,32 +1,30 @@
-#ex1Slider .slider-selection {
-	background: #BABABA;
-	width:340px;
-}
-
 .grey {
 	background-color: grey;
 }
 
 .time-display {
 	font-size: 2.3em;
+	margin-top: 135px;
 }
 
-.custom {
-	width:330px;
-	margin-left: 0px;
+
+.weekday {
+	width: 23.5em;
+	margin-top: 20px;
+	margin-bottom: 35px;
+	 
 }
 
+/*sync btn*/
 .btn {
-	width:330px;
+	width: 18em;
 	margin-left: 0px;
 }
 
-#ex1 {
-	width:330px;
-	margin-left: 0px;
+.slider {
+	margin-bottom: 10px;
 }
 
-.btn2 {
-	width:330px;
-	margin-left: 30px;
+#sync-btn {
+	margin-top: 15px;
 }
